# pace26io

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: normalize.rs  tiny01.nw
src/: lib.rs
src/binary_tree/: bin_tree.rs  depth_first_search.rs  indexed_bin_tree.rs  mod.rs
src/newick/: binary_tree.rs  binary_tree_parser.rs  binary_tree_writer.rs  lexer.rs  mod.rs  writer.rs
src/pace/: mod.rs  reader.rs  simplified.rs
src/pace/parameters/: mod.rs  tree_decomposition.rs
