[package]
name = "pace26io"
version = "0.1.0"
edition = "2024"
authors = ["Manuel Penschuck"]
description = "Utilities to read PACE26 instances and write answers"
license = "GPL-3.0-or-later"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
rand = "0.9.2"
rand_pcg = "0.9.0"
